# postgis

./: .cirrus.yml  .clang-format  .cloud-drone.yml  .codespell.ignore  .codespellrc  .cvsignore  .drone-1.0.yml  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  AGENTS.md  CHANGELOG.carto.md  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  ChangeLog  Dockerfile  GEMINI.md  GNUmakefile  GNUmakefile.in  HOWTO_RELEASE  Jenkinsfile  LICENSE.TXT  MIGRATION  Makefile  Makefile.config  Makefile.config.in  NEWS  README.md  README.postgis  README.raster  README.raster.debugging  SECURITY.md  STYLE  (+54 more)
.github/: FUNDING.yml  codecov.bash  codecov.yml  codecov_env.bash
.woodpecker/: codespell.yml  contributor-credits.yml  docs-localized.yml  docs-localized.yml.in  docs.yml  regress.yml  tools.yml  update-docs-localized.sh
Attic/: postgis_sql_71_end.sql.in  postgis_sql_71_start.sql.in  postgis_sql_72_end.sql.in  postgis_sql_72_start.sql.in  postgis_sql_73_end.sql.in  postgis_sql_73_start.sql.in  postgis_sql_74_end.sql.in  postgis_sql_74_start.sql.in  postgis_sql_75_end.sql.in  postgis_sql_75_start.sql.in  postgis_sql_common.sql.in
cmake/: PostGISUtilities.cmake  PostGISVersion.cmake
cunit/: Makefile  cu_algorithm.c  cu_algorithm.h  cu_tester.c
doc/: .cvsignore  .weblate  Makefile  Makefile.comments  Makefile.comments.in  Makefile.in  README  SKILL.md  ST_AsMARC21.xml  ST_GeomFromMARC21.xml  ZMSgeoms.txt  administration.xml  bnf-wkb.txt  bnf-wkt.txt  credits.xml  database_tuning.xml  developer.md  developer.txt  doxygen.cfg.in  extras.xml  extras_address_standardizer.xml  extras_historytable.xml  extras_tigergeocoder.xml  extras_topology.xml  faq.xml  faq_raster.xml  faq_wktraster.xml  geography.txt  installation.xml  installation.xml.in  introduction.xml  long_xact.xml  performance_tips.xml  postgis-review.html  postgis.xml  postgis.xml.in  postgis_comments.sql  postgis_special.xml  raster_comments.sql  reference.xml  (+63 more)
extensions/: Makefile  Makefile.in  README  compute_srid_contiguous_ranges.sql  extension-no-pgxs.mk  extensions_unpackage.sh  extensions_unpackage.sql  make_unpackaged.sql  opt_out.sh  postgis_extension_helper.sql  postgis_extension_helper.sql.in  postgis_extension_helper_uninstall.sql  upgrade-paths-rules.mk  upgrade-paths-rules.mk.in  upgradeable_versions.mk
fuzzers/: Makefile  README.TXT  README.md  build_google_oss_fuzzers.sh  build_oss_fuzz.sh  build_seed_corpus.sh  fuzzingengine.c  geojson_import_fuzzer.cpp  geojson_import_fuzzer.dict  geos_stub.h  install_oss_fuzz_build_deps.sh  liblwgeom_fuzzer.hpp  proj_stub.h  raster_deserialize_fuzzer.c  twkb_import_fuzzer.cpp  wkb_import_fuzzer.cpp  wkt_import_fuzzer.cpp  wkt_import_fuzzer.dict  wkt_import_fuzzer.options
hwgeom/: Makefile  postgis.h  postgis.sql.in  postgis_algo.c  postgis_chip.c  postgis_debug.c  postgis_estimate.c  postgis_fn.c  postgis_geos.c  postgis_geos_wrapper.cpp  postgis_gist_71.c  postgis_gist_72.c  postgis_inout.c  postgis_ops.c  postgis_proj.c  postgis_svg.c  postgis_transform.c
java/: Makefile
jdbc/: Makefile  README
jdbc2/: .cvsignore  Makefile  README  build.xml  regression.txt  sources.inc  todo.txt  woody.patch
libjts/: Makefile  README
liblwgeom/: CMakeLists.txt  Makefile  Makefile.in  README.topo  TODO  box2d.c  bytebuffer.c  bytebuffer.h  effectivearea.c  effectivearea.h  g_box.c  g_coord.c  g_geometry.c  g_ptarray.c  g_serialized.c  g_serialized.txt  g_util.c  gbox.c  geodesic.c  geodesic.h  gserialized.c  gserialized.h  gserialized.txt  gserialized1.c  gserialized1.h  gserialized2.c  gserialized2.h  gutil.c  intervaltree.c  intervaltree.h  kmeans.c  kmeans.h  lex.yy.c  libgeom.h  liblwgeom.h  liblwgeom.h.in  liblwgeom_internal.h  liblwgeom_topo.h  liblwgeom_topo_internal.h  libtgeom.c  (+128 more)
liblwgeom/cunit/: Makefile  Makefile.in  README  cu_algorithm.c  cu_algorithm.h  cu_boundary.c  cu_buildarea.c  cu_bytebuffer.c  cu_catmullrom.c  cu_chaikin.c  cu_clean.c  cu_clip_by_rect.c  cu_effectivearea.c  cu_filterm.c  cu_force_dims.c  cu_force_sfs.c  cu_geodetic.c  cu_geodetic.h  cu_geodetic_data.h  cu_geos.c  cu_geos_cluster.c  cu_gserialized1.c  cu_gserialized2.c  cu_homogenize.c  cu_homogenize.h  cu_in_encoded_polyline.c  cu_in_geojson.c  cu_in_geojson.c~  cu_in_twkb.c  cu_in_wkb.c  cu_in_wkb_fuzz.h  cu_in_wkt.c  cu_iterator.c  cu_libgeom.c  cu_libgeom.h  cu_lwstroke.c  cu_measures.c  cu_measures.h  cu_minimum_bounding_circle.c  cu_misc.c  (+41 more)
liblwgeom/examples/: Makefile  README  unparser.c
liblwgeom/topo/: README.topo  liblwgeom_topo.h  liblwgeom_topo_internal.h  lwgeom_topo.c  lwgeom_topo_polygonizer.c  lwt_edgeend.c  lwt_edgeend.h  lwt_edgeend_star.c  lwt_node_edges.c
libpgcommon/: CMakeLists.txt  Makefile  Makefile.in  common.h  gserialized_gist.c  gserialized_gist.h  lwgeom_cache.c  lwgeom_cache.h  lwgeom_pg.c  lwgeom_pg.h  lwgeom_pg_typmod.h  lwgeom_transform.c  lwgeom_transform.h  pgsql_compat.h  shared_gserialized.c
libpgcommon/cunit/: Makefile  Makefile.in
libpgcommon/sql/: AddToSearchPath.sql.inc
loader/: Makefile  Makefile.in  Makefile.pgsql2shp.in  Makefile.shp2pgsql  Makefile.shp2pgsql.in  PQunescapeBytea.c  README.i18n  README.pgsql2shp  README.shp2pgsql  TODO  compat.h  dbfopen.c  getopt.c  getopt.h  loader_actions.h  pgsql2shp-cli.c  (+24 more)
postgis/: .geography_measurement.c.marks  BBOXCACHE_BEHAVIOURS  CMakeLists.txt  Makefile  Makefile.in  Makefile.pgxs  README  SERIALIZED_FORM  TODO  brin_2d.c  brin_common.c  brin_nd.c  common_after_upgrade.sql  common_before_upgrade.sql  compat.h  flatgeobuf.c  flatgeobuf.h  geobuf.LICENSE  geobuf.c  geobuf.h  geobuf.pb-c.c  geobuf.pb-c.h  geobuf.proto  geography.h  geography.sql.in  geography.sql.in.c  geography_brin.sql.in  geography_btree.c  geography_centroid.c  geography_distance.c  geography_estimate.c  geography_gist.c  geography_inout.c  geography_measurement.c  geography_measurement_trees.c  geography_measurement_trees.h  geography_overlay.c  geometry_estimate.c  geometry_gist_selectivity.c  geometry_inout.c  (+148 more)
postgis/cunit/: Makefile.in  cu_tester.c
(+4770 files in other folders)
